--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@
 yoshimi-1.2.x
 - ALSA MIDI can now auto-connect.
 - changed x.x.x.notes to Changelog as requested by packagers.
+- Jack MIDI autoconnects too!
 
 yoshimi-1.2.3
 - Some more minor bug fixes.
