--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,7 @@
-If you want the latest and (hopefully) greatest, click on the 'code' tab and then 'Download Snapsot'. This will give you a tarball of the current 'master'.
+If you want the latest and (hopefully) greatest, click on the 'code' tab and then 'Download Snapsot'. This will give you a tarball of the current development version.
 
 
-yoshimi-1.2.4-rc2
+yoshimi-1.2.4-rc3
 
 - ALSA MIDI can now auto-connect.
 - Changed x.x.x.notes to Changelog as requested by packagers.
@@ -23,6 +23,9 @@ yoshimi-1.2.4-rc2
 - Bugfix - missing 'include' in main.cpp stopped compilation - but not in all environments!
 - Changed unison size highlighting. With no code change, it stopped working for some reason!
 - Improved VU displays.
+- Updated INSTALL instructions and removed duplicates of this and COPYING in /src
+- detached part outputs from main volume and added clip indication in panel (doesn't
+  clear with 'Stop' so fundged)
 
 
 yoshimi-1.2.3
