--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,14 @@
 If you want the latest and (hopefully) greatest, click on the 'code' tab and then 'Download Snapshot'. This will give you a tarball of the current development version.
 
 yoshimi-1.2.x
+- Made yoshimi support multiple in-process instances:
+  1) Added "New instance" menu item in "Yoshimi" submemu.
+  2) Jack/alsa midi/audio port names are named "yoshimi" + postfix
+     (empty for the first instance and -1,-2,-3 etc.. for the next).
+  3) Windows names (main window, panel, keyboad) are named according
+     to instance number with unique postfix.
+  4) Only main window of the first instance exits process.
+
 - CMake policy change to stop warning message
 - Small correction in part peak representation
 - Copied some ancient history into Docs
