- Just a few UI improvements.

--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,7 @@
 If you want the latest and (hopefully) greatest, click on the 'code' tab and then 'Download Snapshot'. This will give you a tarball of the current development version.
 
 yoshimi-1.2.x
+- Just a few GUI improvements
 
 yoshimi-1.2.5
 - Made yoshimi support multiple in-process instances:
