--- a/Changelog
+++ b/Changelog
@@ -12,6 +12,8 @@ yoshimi-1.2.x
   was called, lrintf() behaves exactly as (int)truncf() with that difference, that
   (int)truncf() returns always the same result not depending on external factors.
 - Made command line control for yoshimi instances (OFF by default)
+- Added error message if midi bank chnags to close
+- Ported portamento rate and depth to controllers from Zyn.
 
 yoshimi-1.2.5
 - Made yoshimi support multiple in-process instances:
