--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,7 @@ yoshimi-1.3.x
     but not changing the sound produced :(
   Phaser additions work correctly, but GUI controls
     Analog, Hyp., Dist. not sychronised :(
+- Phaser done (silly mistake)
 
 2014-12-1 Andrew
 - Enabled cross-instance copy and paste.
