--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 If you want the latest and (hopefully) greatest, click on the 'code' tab and then 'Download Snapshot'. This will give you a tarball of the current development version.
 
 yoshimi-1.3.x
+
+2014-12-6 Andrew
+- Multi-channel support for lv2 plugin
+
 2014-12-5 Will
 - Reverb and Phaser additions
   Reverb bandwidth control sending right numbers
