--- a/Changelog
+++ b/Changelog
@@ -3,7 +3,7 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 yoshimi-1.3.x
 
 2014-12-6 Andrew
-- Multi-channel support for lv2 plugin
+- Added multi-channel support for lv2 plugin
 
 2014-12-5 Will
 - Reverb and Phaser additions
