--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,9 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.x
 
+2014-12-6 Will
+- Corrected long standing bug in unison. Reverb bandwidth OK now!
+
 2014-12-6 Andrew
 - Added multi-channel support for lv2 plugin
 
