--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,11 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.x
 
+2014-12-8 Andrew
+- Separated LV2 plugin instances.
+  Yoshimi - stereo mix,
+  Yoshimi-Multi - stereo mix + 32 individual mono (16 stereo) channels.
+
 2014-12-6 Will
 - Corrected long standing bug in unison. Reverb bandwidth OK now!
 
