--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 If you want the latest and (hopefully) greatest, click on the 'code' tab and then 'Download Snapshot'. This will give you a tarball of the current development version.
 
-yoshimi-1.3.x
+yoshimi-1.3.1
+
+2014-12-8 Will
+- A few optimisations in Reverb and Phaser
+- Released V 1.3.1
 
 2014-12-8 Andrew
 - Separated LV2 plugin instances.
