--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 If you want the latest and (hopefully) greatest, click on the 'code' tab and then 'Download Snapshot'. This will give you a tarball of the current development version.
 
+yoshimi-1.3.x
+
+2014-12-9 Andrew
+- lv2 plugin: fixed ringbuffer write when midi message
+  should be splitted into chunks (this is a very rare condition)
+
 yoshimi-1.3.1
 
 2014-12-8 Will
