--- a/Changelog
+++ b/Changelog
@@ -2,9 +2,13 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.x
 
+2015-1-1 Will
+- Settings->Bank root dirs now displays root IDs and marks
+  current root.
+
 2014-12-21 Will
 - Changed concept of default root dir to current root dir.
-  corrent root is where new banks are saved to.
+  current root is where new banks are saved to.
   changing current doesn't alter list order or root ID.
   ID will be used for MIDI root dir setting & bank access.
 
