--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,10 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.x
 
+2015-1-2 Will
+- Bank root IDs can now be changed in GUI.
+- Cleaned up code.
+
 2015-1-1 Will
 - Settings->Bank root dirs now displays root IDs and marks
   current root and MIDI banks changes only see current root.
