--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,9 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.x
 
+2015-1-3 Andrew
+- Corrected target lib suffix detection for lv2 plugin
+
 2015-1-2 Will
 - Bank root IDs can now be changed in GUI.
 - Cleaned up code.
