--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,11 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.x
 
+2015-1-3 Will
+- Added warnings if loading patches named 'Simple'Sound.
+- Applied patch from Harry Nakos
+  Volume & Pan now synchronised between main window and panel.
+
 2015-1-3 Andrew
 - Corrected target lib suffix detection for lv2 plugin
 
