--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,10 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.x
 
+2015-1-3 Andrew
+- Started control interface implementation
+  (logging this for history)
+
 2015-1-3 Will
 - Added warnings if loading patches named 'Simple'Sound.
 - Applied patch from Harry Nakos
