--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,13 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.x
 
+2015-1-5 Will
+- MIDI bank root change now in place :)
+  but not currently updating GUI :(
+- Setting of both root and extended program CC now error checked
+  but have to use the spinner up/down arrows - can't seem to
+  reognise the 'Return' key :?
+
 2015-1-3 Andrew
 - Started control interface implementation
   (logging this for history)
