--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,12 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.x
 
+2015-1-5 Andrew
+- MIDI bank root dir change algorithm now uses low priority threads
+- MIDI bank root dir and bank changes are synchronized now
+- GUI is updated accordingly to bank root dir changes
+
+
 2015-1-5 Will
 - MIDI bank root change now in place :)
   but not currently updating GUI :(
