--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,9 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.x
 
+2015-1-8 Andrew
+- Fixed segfault on exit if Alsa audio engine is used
+
 2015-1-5 Andrew
 - MIDI bank root dir change algorithm now uses low priority threads
 - MIDI bank root dir and bank changes are synchronized now
