--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,9 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.x
 
+2015-1-14 Andrew
+- Fixed lv2 plugin crash on midi event loop transition (frame X to zero)
+
 2015-1-12 Will
 - Applied patches from Harry
   MIDI channel selection now in sync between main window and panel and
