--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,9 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.x
 
+2015-1-15 Andrew
+- Don't change floating point rules in case of lv2 plugin. Hosts should do it.
+
 2015-1-14 Andrew
 - Fixed lv2 plugin crash on midi event loop transition (frame X to zero)
 
