--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,10 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.x
 
+2015-1-22 Andrew
+- Rewrited Bank/Root handling algorithms to support numbering
+- Fixed PADSynth_used detection algorithm
+
 2015-1-15 Andrew
 - Don't change floating point rules in case of lv2 plugin. Hosts should do it.
 
