--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,10 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.x
 
+2015-1-23 Andrew
+- Added per-instance config files support
+- Now saving bank ids in config file too
+
 2015-1-22 Andrew
 - Rewrited Bank/Root handling algorithms to support numbering
 - Fixed PADSynth_used detection algorithm
