--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,12 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.x
 
+2015-1-24 Andrew
+- New instance now gets first available unique ID
+- Added menu item to start instance with given ID
+- Sort banks on first start or if mappings are not defined
+- LV2 plugin now uses new bank interface
+
 2015-1-23 Andrew
 - Added per-instance config files support
 - Now saving bank ids in config file too
