--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,12 @@
 If you want the latest and (hopefully) greatest, click on the 'code' tab and then 'Download Snapshot'. This will give you a tarball of the current development version.
 
-yoshimi-1.3.x
+yoshimi-1.3.2-rc1
+
+2015-1-24 Will
+- Bumped version number
+- Bug fix in CC tests
+- Removed unnecesary instrument prefix tests when indentifying banks
+- Added early startup comand line message
 
 2015-1-24 Andrew
 - New instance now gets first available unique ID
