--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,10 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.2-rc1
 
+2015-1-26 Andrew
+- make new bank id search start from 127 downwards
+- do not reload bank on id change
+
 2015-1-24 Will
 - Bumped version number
 - Bug fix in CC tests
