--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,11 @@
 If you want the latest and (hopefully) greatest, click on the 'code' tab and then 'Download Snapshot'. This will give you a tarball of the current development version.
 
-yoshimi-1.3.2-rc1
+yoshimi-1.3.2-rc2
+
+2015-1-27 Will
+- Bumped version number to rc2
+- Clarified text of error messages
+
 
 2015-1-27 Andrew
 - Added splash window showing current loading status
@@ -11,6 +16,7 @@ yoshimi-1.3.2-rc1
 - do not reload bank on id change
 
 2015-1-24 Will
+- Un-numbered instruments now handled as before (placed from 160 downwards)
 - Bumped version number
 - Bug fix in CC tests
 - Removed unnecesary instrument prefix tests when indentifying banks
