--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,10 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.2-rc2
 
+2015-1-28 Will
+- Added check to prevent attempt to change non-writable instrument files
+  *before* GUI entries written
+
 2015-1-27 Will
 - Allow instrument name of just 3 chars
 - Bumped version number to rc2
