--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,9 @@ If you want the latest and (hopefully) greatest, click on the 'code' tab and the
 
 yoshimi-1.3.2-rc2
 
+2015-1-31 Andrew
+- Start guis only from main gui thread
+
 2015-1-27 Will
 - Allow instrument name of just 3 chars
 - Bumped version number to rc2
