- Final Updates for 1.3.2 release

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,8 @@
-If you want the latest and (hopefully) greatest, click on the 'code' tab and then 'Download Snapshot'. This will give you a tarball of the current development version.
+
+yoshimi-1.3.2
+
+2015-2-2 Will
+- Final updates to files for full release
 
 yoshimi-1.3.2-rc2
 
