--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,7 @@
 
 yoshimi-1.3.2
+2015-2-3 Andrew
+- Fix png image creation on fltk < 1.3
 
 2015-2-2 Will
 - Final updates to files for full release
