--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.*
 
+2015-2-12
+- Added format string to 3 fltk alert calls to silence gcc warnings
+
 2015-2-6 Will
 - Unified root bank insturment log messages
 - Updated MIDI test files
