--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.*
 
+2015-2-13 Will
+- Basic structure complete and working
+  but changing IDs etc. not yet implemented
+
 2015-2-12 Will
 - Developed window selection/swapping and forward link from config
 - Fixed bug that created empty banks
