--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.*
 
+2015-2-15 Will
+- implemented bank complete removal
+
 2015-2-14 Will
 - bank swaps/ID changes now in place
   but not checked for unwritable locations
