--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.*
 
+2015-2-16 Will
+- added middle button close of banks and instruments
+  as if auto close has been set
+
 2015-2-15 Will
 - implemented bank complete removal
 
@@ -18,6 +22,9 @@ yoshimi 1.3.*
 2015-2-12 Will
 - Developed window selection/swapping and forward link from config
 - Fixed bug that created empty banks
+
+2015-2-12
+- Added format string to 3 fltk alert calls to silence gcc warnings
 
 2015-2-6 Will
 - Unified root bank insturment log messages
