--- a/Changelog
+++ b/Changelog
@@ -1,19 +1,25 @@
 yoshimi 1.3.*
 
+2015-2-18
+- Implemented bank rename
+- Added gui buttons for this and instrument renames
+- Close on selection now righthand mouse button
+- bug was slowing down bank swaps -fixed
+
 2015-2-16 Will
-- added middle button close of banks and instruments
+- Added middle button close of banks and instruments
   as if auto close has been set
 
 2015-2-15 Will
-- implemented bank complete removal
+- Implemented bank complete removal
 
 2015-2-14 Will
-- bank swaps/ID changes now in place
+- Bank swaps/ID changes now in place
   but not checked for unwritable locations
 - Now checked
 - Added highlighing of current bank
 - Implemented adding banks
-- corrected bugs in bank swaps
+- Corrected bugs in bank swaps
 
 2015-2-13 Will
 - Basic structure complete and working
