--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 yoshimi 1.3.*
 
-2015-2-18
+2015-2-19 Will
+- Small gui code optimisations
+- Removed some confusing, duplicate, redundant & disabled code
+
+2015-2-18 Will
 - Implemented bank rename
 - Added gui buttons for this and instrument renames
 - Close on selection now righthand mouse button
