--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.3-rc
 
+2015-2-28 Will (vector)
+- Further separated out controls, and also enabled setting instruments
+  however this is very experimental and *not RT safe*
+
 2015-2-27 Will
 - Added and updated Docs & Images
 - Prepared for full release
@@ -11,7 +15,7 @@ yoshimi 1.3.3-rc
 - Some fine tuning
 - Updated documentation
 
-2015-2-25 Will
+2015-2-25 Will (vector)
 - Separated X & Y to independent NRPNs
   NRPN msb = 64, lsb = 1 for X
   NRPN msb = 64, lsb = 2 for Y
@@ -19,13 +23,13 @@ yoshimi 1.3.3-rc
                 1 = volume
                 2 = pan
 
-2015-2-24 Will
+2015-2-24 Will (vector)
 - Seems stable now - crashes were due to mixture of
   channel and part limits.
 - Mixer panel now shows groups of 16 parts.
 - Volume sweeps implemented but need balancing better.
 
-2015-2-23 Will
+2015-2-23 Will (vector)
 - First attempt at vector control
   Setting NRPNs and vector CCs seems fine.
   Only implimented volume control.
