--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,9 @@ yoshimi 1.3.3-rc
 2015-2-28 Will (vector)
 - Further separated out controls, and also enabled setting instruments
   however this is very experimental and *not RT safe*
+- improved this now, but discovered a gui bug if the panel
+  is open when a vector program change takes place - gui freezes :(
+- got rid of a warning message in jack engine :)
 
 2015-2-27 Will
 - Added and updated Docs & Images
