--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.3.3-rc
 
+2015-3-1 Will (vector)
+- Moved all NRPN and Vectore code to MusicOI
+- Added 'Brightness' control
+- GUI freeze still not resolved :(
+
+
 2015-2-28 Will (vector)
 - Further separated out controls, and also enabled setting instruments
   however this is very experimental and *not RT safe*
