--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,9 @@
-yoshimi 1.3.3-rc
+yoshimi 1.3.3
+
+2015-3-2 Will
+- Added patch from Jakub Cajka to furthur nail asString ambiguities
+- Added SVG icon image (renamed alternative)
+- Set up for release
 
 2015-2-27 Will
 - Added and updated Docs & Images
