--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.3
 
+2015-3-10 Will (vector)
+- Panel Window Bugfix
+- General clean-ups
+
 2015-3-2 Will
 - Added patch from Jakub Cajka to furthur nail asString ambiguities
 - Added SVG icon image (renamed alternative)
