--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.3
 
+2015-3-12 Will (vector)
+- inserted missing ";" at line 60 of yoshimi.ttl
+  found by Holger Marzen
+
 2015-3-10 Will (vector)
 - Panel Window Bugfix
 - General clean-ups
