--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2015-3-15 Andrew
+Added asynchronous gui update ability from arbitrary threads
+
 2015-3-12 Will
 - inserted missing ";" at line 60 of yoshimi.ttl
   found by Holger Marzen
