--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,11 @@
 yoshimi 1.3.x
 
+2015-3-15 Will
+- Used new gui updating so that MIDI volume and pan changes
+  are shown in both the main and panel windows
+
 2015-3-15 Andrew
-Added asynchronous gui update ability from arbitrary threads
+- Added asynchronous gui update ability from arbitrary threads
 
 2015-3-12 Will
 - inserted missing ";" at line 60 of yoshimi.ttl
