--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2015-3-18 Will
+- Pulled remaining program change gui calls into gui thread
+- Root path window now correctly tracks 'save' changes
+
 2015-3-15 Will
 - Used new gui updating so that MIDI volume and pan changes
   are shown in both the main and panel windows
