--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2015-3-22 Will
+- Rationalised MIDI volume control
+- Implemented MIDI volume control range setting
+- Implemented missing resets in 'Reset All Controllers'
+
 2015-3-18 Will
 - Pulled remaining program change gui calls into gui thread
 - Root path window now correctly tracks 'save' changes
