--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,16 @@
 yoshimi 1.3.x
 
-2015-2-26 Will
+
+2015-3-28 Will
+- Reports can be sent to the console window or stderr under
+  runtime selection in the settings window
+  This setting is saved, per instance
+- Lots of small log message rationalisations
+- Removed some old commented out code
+- Reinstated search for ZynAddSubFX config search if no
+  Yoshimi one can be found
+
+2015-3-26 Will
 - Bugfixes in setup CC selections
 - Removed auto close checkbox from Banks and instruments
 - Reports menu item greyed out if not enabled.
