--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,13 @@
 yoshimi 1.3.x
 
 
+2015-3-29 Will
+- Fixed root dir length bug
+- Fixed add root no-show bug
+- Fixed remove root still showing bug
+- Removed root path tab from Setup window as it
+  was getting too complicated syncing 2 copies
+
 2015-3-28 Will
 - Reports can be sent to the console window or stderr under
   runtime selection in the settings window
