--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,7 @@
-yoshimi 1.3.4-rc
+yoshimi 1.3.4
+
+2015-4-1 Will
+- Tidied up for release on such an auspicious date!
 
 2015-3-30 Andrew
 - Share async gui process function between main and lv2 mode
