- Corrected merge errors

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.4
 
+2015-4-1 Will (vector)
+- Bugfix corrected merge errors
+
 2015-4-1 Will
 - Tidied up for release on such an auspicious date!
 
