--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+yoshimi 1.3.x
+
+2015-4-3 Will  (vector)
+- Implemented direct part program change
+- Vector controls only enabled if NUM_MIDI_PARTS set to 64
+
 yoshimi 1.3.4
 
 2015-4-1 Will (vector)
