--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2015-4-17 Will (vector)
+- Implemented direct part channel change
+- Corrected license anomalies
+- Updated docs
+
 2015-4-15 Will (vector)
 - Implemented direct part CC change
 - Corrected and updated Docs
