--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 1.3.x
 
+2015-4-18 Will (vector)
+- Added NRPN and vector error checks and warnings
+- Updated docs
+- Very specific segfault with Rosegarden V12.4 and 'RootBankChange'
+  test file has cleared! Confirmed it is still there on pre
+  yoshimi 1.3.4 - puzzling :(
+
 2015-4-17 Will (vector)
 - Implemented direct part channel change
 - Corrected license anomalies
