--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.3.x
 
 2015-4-19 Will (vector)
 - Fixed regressions caused by mixer gui changes!
+- More adjustments giving greater flexibility to NRPNs
 
 2015-4-18 Will (vector)
 - Added NRPN and vector error checks and warnings
