--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2015-4-24 Will
+- Implemented 14bit NRPNs
+- Implemented scroll wheel control of knobs
+- Implemented X as well as Y knob control
+
 2015-4-21 Will (vector)
 - Some more small optimisations
 
@@ -11,7 +16,7 @@ yoshimi 1.3.x
 - Added NRPN and vector error checks and warnings
 - Updated docs
 - Very specific segfault with Rosegarden V12.4 and 'RootBankChange'
-  test file has cleared! Confirmed it is still there on   yoshimi 1.3.3
+  test file has cleared! Confirmed it is still there on yoshimi 1.3.3
   puzzling :(
 - Rationalised mixer panel gui, removing duplicates
 
