--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2015-4-30 Will
+- Fixed regression in distortion level.
+- Added voice number to AddSynth oscillator editor.
+- Implemented NRPN data increment and decrement.
+
 2015-4-27 Will
 - Fixed bug that stopped some rotary controls responding to mouse wheel.
 - Re-orderd part effects window to more closely match system & insert.
@@ -10,6 +15,7 @@ yoshimi 1.3.x
 - Added part number and name to editing window title bars.
 - Made it possible to silently disconnect/reconnect a part from all MIDI input.
 - Improved config settings for Bank Root & Extended Program Change.
+
 2015-4-24 Will
 - Implemented 14bit NRPNs
 - Implemented scroll wheel control of knobs
