--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2015-5-6 Will
+- Implemented Zyn-compatible NRPNs with extension for effect type change
+  (some gui imprevements needed)
+
 2015-5-2 Will
 - Improved NRPN handling of 14bit NRPNs and 'full' NRPNs with reversed data byte order.
 
