--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2015-5-7 Will
+- Improved bank root and extended program change CC setting method.
+- Corrected NRPN gui display issues
+- Updated Docs
+
 2015-5-6 Will
 - Implemented Zyn-compatible NRPNs with extension for effect type and destination
   part number change.  (some gui improvements needed)
