--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2015-5-21 Will
+- Implemented identification of all three synth engines.
+- Made workaround for corrupted instrument headers.
+
 2015-5-15 Will
 - Implemented max part & part group control.
 
