--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.x
 
+2015-5-23 Will
+- Small improvement to synth ID discovery.
+- Prompts at foot of window.
+- Removed old style new bank creation.
+
 2015-5-21 Will
 - Implemented identification of all three synth engines.
 - Made workaround for corrupted instrument headers.
