--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 1.3.x
 
+2015-5-29 Will
+- Fixed regression that stopped mixer panel updating on MIDI program change.
+- Moved max part control from parameters menu to alongside part number.
+- Refactored part gui calls to improve updates.
+- Implemented colour based engine IDs in mixer panel window
+- 'Clear All Parameters' now resets NRPNs and vector control.
+
 2015-5-27 Will
 - Trial for colour based engine IDs in main window.
 - Fixed bug that caused banks to be initialied twice on startup.
@@ -36,7 +43,8 @@ yoshimi 1.3.x
 - Updated Docs.
 
 2015-5-2 Will
-- Improved NRPN handling of 14bit NRPNs and 'full' NRPNs with reversed data byte order.
+- Improved NRPN handling of 14bit NRPNs and 'full' NRPNs with reversed
+  data byte order.
 
 2015-4-30 Will
 - Fixed regression in distortion level.
