--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2015-5-30 Will
+- Bugfix! Only part 1 was responding to gui instument selection.
+
 2015-5-29 Will
 - Fixed regression that stopped mixer panel updating on MIDI program change.
 - Moved max part control from parameters menu to alongside part number.
