--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2015-6-1 Will
+- Common Add,Sub,Pad colours now defines in CMakeLists.txt
+
 2015-5-30 Will
 - Vector control volume 'swap' now uses an inverse square law to keep the
   overall level fairly constant.
