--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+yoshimi 1.3.5-rc4
+
+- Fixed failure of Insert Effect part list length to update when
+  number of parts changed.
+
 yoshimi 1.3.5-rc3
 
 2015-6-13 Will
