--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+yoshimi 1.3.x
+
+yoshimi 1.3.5
+- Finalised for release and tagged.
+- Added more details to docs.
+
 yoshimi 1.3.5-rc4
 
 - Fixed failure of Insert Effect part list length to update when
