--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2015-6-24 Will (buffers)
+- Set up and tested separate buffers for JACK only, very untidy.
+- currently breaks ALSA and LV2.
+
 2015-6-19 Will
 - bugfix set typecast in BankUI to enable build witj fltk 1.1
 - bugfix changed MasterUI so that main window is refreshed when
