--- a/Changelog
+++ b/Changelog
@@ -4,6 +4,7 @@ yoshimi 1.3.x
 - Minor gui bugfix 'Simple Sound' correctly set to 'No Title' in
   all windows when actually edited.
 - Vector control individual features can be reversed.
+- Enabled NRPN part destination setting.
 
 2015-7-3 Will
 - Merged in corrected buffers - still some work to do on alsa
@@ -16,7 +17,7 @@ yoshimi 1.3.x
 - currently breaks ALSA and LV2.
 
 2015-6-19 Will
-- bugfix set typecast in BankUI to enable build witj fltk 1.1
+- bugfix set typecast in BankUI to enable build with fltk 1.1
 - bugfix changed MasterUI so that main window is refreshed when
   'State' is loaded.
 
