--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,13 @@
+yoshimi 1.3.5.2
+
+2015-7-11 Will
+- Fixed bug that would crash if a bank or instrument rename
+  was cancelled.
+  
+2015-7-5 Will
+- Minor gui bugfix 'Simple Sound' correctly set to 'No Title' in
+  all windows when actually edited.
+
 yoshimi 1.3.5.1
 
 2015-6-19 Will
