--- a/Changelog
+++ b/Changelog
@@ -1,13 +1,16 @@
 yoshimi 1.3.x
 
-2015-7-20
+2015-7-20 Will (buffers)
+- Hopefully completed Alsa updates.
+
+2015-7-20 Will (buffers)
 - Implemented Alsa endian changes.
 
 2015-7-16 Will (buffers)
 - Alsa now recognises 32, 24 & 16 bit formats LE only.
 
 2015-7-15 Will
-- Addied sanity checks to vector feature CC settings.
+- Added sanity checks to vector feature CC settings.
 - Small correction to alsa audio.
 - More doc updates.
 
