Added failure messages to splash screen.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.x
 
+2015-8-13 Will
+- Added failure messages to splash screen and increased timeout.
+
 2015-7-20 Will
 - Merger in ALSA updates from 'buffers'.
 - master version now displays an 'M' suffix.
