Extended NRPNs to list dynamic system values (to current report log) Some of which can also be changed.

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.x
 
+2015-8-18 Will
+- Extended NRPNs to list dynamic system values (to current report log)
+  Some of which can also be changed.
+
 2015-8-13 Will
 - Added failure messages to splash screen and increased timeout.
 
