--- a/Changelog
+++ b/Changelog
@@ -1,7 +1,7 @@
 yoshimi 1.3.x
 
 2015-8-20 Will
-- Completed new NRPN extensions so most system values can be changes.
+- Completed new NRPN extensions so most system values can be changed.
 
 2015-8-18 Will
 - Extended NRPNs to list dynamic system values (to current report log)
