--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,8 @@
-yoshimi 1.3.6 rc2
+yoshimi 1.3.6 rc3
+
+2015-9-13 Will
+- Merged stable version from command branch.
+- Set version as 1.3.6 rc3.
 
 2015-9-7 Will (command)
 - more extensions to command line access.
