--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,10 @@
 yoshimi 1.3.6 rc3
 
+2015-9-14 Will
+- Fixed bug that let an invalid instrument be stored in a bank.
+- Changed 'Parameters' to 'Patch sets'
+- Set version as 1.3.6 rc4.
+
 2015-9-13 Will
 - Merged stable version from command branch.
 - Set version as 1.3.6 rc3.
