--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.3.6 rc3
 
+2015-9-20 Andrew
+- Fixed LV2 plugin buffersize setting in case of smaller
+  internal buffersize.
+
 2015-9-14 Will
 - Fixed bug that let an invalid instrument be stored in a bank.
 - Changed 'Parameters' to 'Patch sets'
