--- a/Changelog
+++ b/Changelog
@@ -1,11 +1,11 @@
 yoshimi 1.3.6 M
 
-2015-9-26 Will
+2015-10-1 Will
 - First time config search was getting confused if zyn or old style
   yoshi configs were there, so they are no longer accepted.
 - Added definitive search for bank dirs launch directory parent.
-- Identifed preset bugs.
 - Added definitive search for preset dirs in launch directory parent.
+- Identifed preset bugs. Only gui updates needed now.
 
 yoshimi 1.3.6
 
