--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,8 @@
-yoshimi 1.3.6 M
+yoshimi 1.3.6.1
+
+2015-10-2 Will
+- Set up bugfix branch to track only the current release.
+- Set version to 1.3.6.1
 
 2015-10-1 Will
 - First time config search was getting confused if zyn or old style
