--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.6 M
 
+2015-10-3 Will
+- More improvements to command line control
+
 2015-10-1 Will
 - First time config search was getting confused if zyn or old style
   yoshi configs were there, so they are no longer accepted.
