--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.3.6 M
 
+2015-10-8 Will
+- Fixed segfault when changing command line mode.
+
 2015-10-7 Will
 - Brought Andrew's thread and readline into older style command line.
 - Further enhancements.
