--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.3.6 M
 
 2015-10-9 Will
 - Changed mode return behaviour.
+- Changed some command names.
 
 2015-10-8 Will
 - Fixed segfault when changing command line mode.
